# yufuin-club-watcher

./: .gitignore  README.md  pyproject.toml
data/: last_status.json  log.txt
src/yufuin_club_watcher/: __init__.py  __main__.py
