[project]
name = "yufuin-club-watcher"
version = "0.1.0"
description = "Monitor Yufuin Club booking availability and notify via ntfy.sh"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
yufuin-club-watcher = "yufuin_club_watcher.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
